--- a/Local.ini
+++ b/Local.ini
@@ -17,6 +17,7 @@ DHT dht(DHTPIN, DHTTYPE); // enlaze pin y tipo
 #define VoltajeLM35    3300.0 // en milivolt
 #define RangoAnalogo 1024.0 // rango pin analogo 0 a 1023 
 #define PIN_LM35       A0 // pin a LM35
+#define PIN_LM352       1 // pin a LM35
 
 // LEDS
 const int LEDOK = 7; // Led verde
@@ -56,6 +57,17 @@ float ObtenerTemperaturaLM()
 {
   // codigo sensor LM35 temperatura exterior
   float ValorLM35 = analogRead(PIN_LM35); // rango del sensor
+  float milliVolt = ValorLM35 * (VoltajeLM35 / RangoAnalogo);// convertir rango a voltaje
+  int tempC = (milliVolt / 10);// convertir voltaje a C int para entero 
+
+  return tempC;
+}
+
+// Funcion para obtener temperatura interior
+float ObtenerTemperaturaLM2() 
+{
+  // codigo sensor LM35 temperatura interior
+  float ValorLM35 = analogRead(PIN_LM352); // rango del sensor
   float milliVolt = ValorLM35 * (VoltajeLM35 / RangoAnalogo);// convertir rango a voltaje
   int tempC = (milliVolt / 10);// convertir voltaje a C int para entero 
 
@@ -105,7 +117,7 @@ void pantalla(float tempCext, float tempCint, float humedad, float caudal_L_h, f
   oled.print(Volumen);
 
   oled.display();
-  delay(500);
+  //delay(500);
   oled.clearDisplay();
 }
 
@@ -136,19 +148,17 @@ void loop ()
 
   // LLamado a los datos
   float tempCext = ObtenerTemperaturaLM();
-
+  float tempCint = ObtenerTemperaturaLM2();
+  
   // declaracion de datos
-  float tempCint;
   float humedad;
   
   // Parce Verificador de DHT11
   if (isnan(dht.readTemperature()))
   {
-    tempCint = tempCint;
     humedad = humedad;
   } else
   {
-    tempCint = dht.readTemperature();
     humedad = dht.readHumidity();
   }
 
