--- a/Local.ini
+++ b/Local.ini
@@ -45,9 +45,9 @@ float ObtenerFrecuencia()
   float frecuencia; // Declarar arreglo 0=Frecuencia 1=TemperaturaExterior 2=Humedad 3=TemperaturaInterior
   NumPulsos = 0;   // Reset a 0 el número de pulsos
   interrupts();    // Habilitar las interrupciones
-  delay(2000);   // muestra de 2 segundo
+  delay(1000);   // muestra de 1 segundo
   noInterrupts(); // Deshabilitar las interrupciones
-  frecuencia = NumPulsos/2; // Hz(pulsos por segundo)
+  frecuencia = NumPulsos; // Hz(pulsos por segundo)
 
   return frecuencia;
 }
@@ -63,7 +63,7 @@ float ObtenerTemperaturaLM()
   return tempC;
 }
 
-// Funcion para obtener temperatura interior
+// Funcion para obtener temperatura intertior
 float ObtenerTemperaturaLM2() 
 {
   // codigo sensor LM35 temperatura interior
@@ -117,7 +117,7 @@ void pantalla(float tempCext, float tempCint, float humedad, float caudal_L_h, f
   oled.print(Volumen);
 
   oled.display();
-  //delay(500);
+  delay(1);
   oled.clearDisplay();
 }
 
@@ -139,7 +139,7 @@ void loop ()
 {
 
   // Calculo caudalimetro
-  float frecuencia = ObtenerFrecuencia(); //obtener la Frecuencia de los pulsos en Hz
+  int frecuencia = ObtenerFrecuencia(); //obtener la Frecuencia de los pulsos en Hz
   float caudal_L_m = frecuencia/factor_conversion; //calcular el caudal en Litros por minuto
   float caudal_L_h = caudal_L_m*60; //calcular el caudal en Litros por hora
   dt = millis()-t0; // calcular variacion en el tiempo desde ultima medida
@@ -147,11 +147,11 @@ void loop ()
   Volumen = Volumen + (caudal_L_m/60) * (dt/1000); // Volumen (Litros) = caudal * tiempo en segundos
 
   // LLamado a los datos
-  float tempCext = ObtenerTemperaturaLM();
-  float tempCint = ObtenerTemperaturaLM2();
-  
+  int tempCext = ObtenerTemperaturaLM();
+  int tempCint = ObtenerTemperaturaLM2();
   // declaracion de datos
-  float humedad;
+
+  int humedad=0;
   
   // Parce Verificador de DHT11
   if (isnan(dht.readTemperature()))
@@ -183,26 +183,16 @@ void loop ()
 
   // Llamar a funcion imprimir
   pantalla(tempCext, tempCint, humedad, caudal_L_h, Volumen);
-
-  // Impresion Caudal y consumo
-  Serial.print ("Consumo: "); 
-  Serial.print (Volumen); 
-  Serial.print ("Litros\tCaudal: "); 
-  Serial.print (caudal_L_m,3); 
-  Serial.print (" L/m\t"); 
-  Serial.print (caudal_L_h,3); 
-  Serial.println ("L/h"); 
-
-    // Impresion Temp Exterior
-  Serial.print("Temperatura exterior: ");
-  Serial.print(tempCext);   // Temperatura exterior
-  Serial.println("°C");
-
-  // Impresion Temp y Humedad interior
-  Serial.print("Temperatura interior: ");
-  Serial.print(tempCint + 2);
-  Serial.print(" °C");
-  Serial.print("   ~   ");
-  Serial.print("Humedad: ");
-  Serial.println(humedad);
+    
+  Serial.print(tempCext);
+  Serial.print("_");
+  Serial.print(tempCint);
+  Serial.print("_");
+  Serial.print(humedad);
+  Serial.print("_");
+  Serial.print(frecuencia);
+  Serial.print("_");
+  Serial.print(caudal_L_h);
+  Serial.print("_");
+  Serial.println(Volumen);
 }
