--- a/ESP8266-01.ini
+++ b/ESP8266-01.ini
@@ -12,6 +12,10 @@ const char* password = PASS;
 const char* host = "192.168.50.141"; // cmd -> ipconfig
 const uint16_t port = 80;
 
+const byte espRx = 5;
+const byte espTx = 4;
+SoftwareSerial SerialEsp(espRx, espTx); // RX, TX  Nodemcu => D1->5, D2->4
+
 // RX msg
 bool received = false;
 String receivedMsg;
@@ -28,12 +32,12 @@ const byte numVars = 6;
 String controlledVars[] = {s_tempCext, s_tempCint, s_humedad, s_frecuencia, s_caudal, s_volumen};
 
 // variables float
-int tempCext = 0;
-int tempCint = 0;
-int humedad = 0;
-int frecuencia = 0;
-int caudal = 0;
-int volumen = 0.0;
+String tempCext;
+String tempCint;
+String humedad;
+String frecuencia;
+String caudal_L_h;
+String Volumen;
 
 
 void setup() 
@@ -122,11 +126,11 @@ void ProcessMsg(){
 
 
 void ConvertVariables(){
-  alarm = s_tempCext.toInt();
-  co = s_tempCint.toInt();
-  lpg = s_humedad.toInt();
-  smoke = s_frecuencia.toInt();
-  temp = s_caudal.toInt(); 
+  tempCext = s_tempCext.toInt();
+  tempCint = s_tempCint.toInt();
+  humedad = s_humedad.toInt();
+  frecuencia = s_frecuencia.toInt();
+  caudal_L_h = s_caudal.toInt(); 
   Volumen = s_volumen.toInt(); 
 }// EOF ConvertVariables
 
@@ -152,9 +156,9 @@ void SendDataToHost(){
   query += "&humedad=";
   query += humedad;
   query += "&frec=";
-  query += freciemcia;
+  query += frecuencia;
   query += "&caudal=";
-  query += caudal_:_h;
+  query += caudal_L_h;
   query += "&consumo=";
   query += Volumen;
   
