--- a/Firmware/Online.ini
+++ b/Firmware/Online.ini
@@ -13,18 +13,18 @@ SoftwareSerial SerialEsp(espRx, espTx);
  float caudal_L_h;
  
 // dependencias de OLED
-#include <Wire.h> // definir
+#include <Wire.h> // definir cursor pantalla
 #include <Adafruit_GFX.h> // definir libreria grafica
 #include <Adafruit_SSD1306.h> // definir libreria de OLED
 #define ANCHO 128 // ancho de la pantalla
 #define ALTO 64 // alto de la pantalla
-#define OLED_RESET 4 // numero "aleatoreo" se usa solo para pantallas que tengan el boton
+//#define OLED_RESET 4 // numero "aleatoreo" se usa solo para pantallas que tengan el boton
 Adafruit_SSD1306 oled(ANCHO, ALTO, &Wire, OLED_RESET); // setear parametros para el oled
 
-// dependencias DHT11
+// dependencias DHT11 temperatura y humedad
 #include <DHT.h>
 #define DHTPIN 4 // pin a DHT11
-#define DHTTYPE DHT11 // definir tipo de modulo
+#define DHTTYPE DHT11 // definir tipo de modelo de sensor
 DHT dht(DHTPIN, DHTTYPE); // enlaze pin y tipo
 
 // dependencias LM35
