--- a/Firmware/ESP8266-01.ini
+++ b/Firmware/ESP8266-01.ini
@@ -42,7 +42,9 @@ String Volumen;
 
 void setup() 
 {
+  //canal del arduino
   Serial.begin(115000);
+  //canal del modulo wifi
   SerialEsp.begin(9600);
 
   // We start by connecting to a WiFi network
@@ -58,17 +60,20 @@ void setup()
   WiFi.mode(WIFI_STA);
   WiFi.begin(ssid, password);
 
+  //para intentar conectarse todo el rato
   while (WiFi.status() != WL_CONNECTED) {
     delay(500);
     Serial.print(".");
   }
-
+  
+  //una vez conectado, imprime los datos de la red que se conecta
   Serial.println("");
   Serial.println("WiFi connected");
   Serial.println("IP address: ");
   Serial.println(WiFi.localIP());
 } // EOF setup
 
+//funcion para enviar los datos al servidor 
 void loop()
 {  
   checkSerialCom();
@@ -78,16 +83,17 @@ void loop()
     received = false;
     ConvertVariables();
     delay(50);
-    // attempt to send data to host
+    // funcion para enviar los datos
     SendDataToHost(); 
   }
 
   //delay(300000); // execute once every 5 minutes
-  delay(10000);
+  delay(10000); // 10 seg
 } // EOF loop
 
 
 /************ Helper Functions **********************/
+//parte del template, hacen verificaciones
 void checkSerialCom()
 {
   char data;
@@ -102,7 +108,8 @@ void checkSerialCom()
   }
 } // EOF checkSerialCom
 
-
+// cuando el arudino envia el mensaje al modulo wifi, se separan en variables
+// independientes 
 void ProcessMsg(){
   receivedMsg.trim();
   Serial.println("Recibido: ");
@@ -124,7 +131,7 @@ void ProcessMsg(){
   Volumen = controlledVars[5];
 } // EOF ProcessMsg
 
-
+//convierte los strings a int 
 void ConvertVariables(){
   tempCext = s_tempCext.toInt();
   tempCint = s_tempCint.toInt();
@@ -134,6 +141,8 @@ void ConvertVariables(){
   Volumen = s_volumen.toInt(); 
 }// EOF ConvertVariables
 
+//enviar los datos al servidor 
+//si no esta conectado, hace un return y se intenta de nuevo enviar
 
 void SendDataToHost(){
   Serial.print(">>>>>>> connecting to ");
@@ -148,7 +157,7 @@ void SendDataToHost(){
     delay(5000);
     return;
   }
-
+  //transmision de datos al servidor
   String query = "web-app/hola.php?tempext=";
   query += tempCext;
   query += "&tempint=";
@@ -163,7 +172,7 @@ void SendDataToHost(){
   query += Volumen;
   
   Serial.println(query);
-
+  //en esta parte se ejecuta el link con los datos en el 
   Serial.println("[Sending a request]");
   client.print(String("GET /") + query + " HTTP/1.1\r\n" +
                "Host: " + host + "\r\n" +
@@ -172,6 +181,7 @@ void SendDataToHost(){
               );
 
   // wait for data to be available
+  //si no se logra enviar, se reintenta
   unsigned long timeout = millis();
   while (client.available() == 0) {
     if (millis() - timeout > 5000) {
