--- a/Firmware/Online.ini
+++ b/Firmware/Online.ini
@@ -1,7 +1,8 @@
 // Wifi
-#include <SoftwareSerial.h>
-const byte espRx = 3;
-const byte espTx = 4;
+#include <SoftwareSerial.h> // para imprimir en los monitores seriales
+//pines digitales del modulo wifi, como hay dos canales se ocupan dos pines digitales
+const byte espRx = 3; 
+const byte espTx = 4; 
 SoftwareSerial SerialEsp(espRx, espTx);
 
 // variables globales
@@ -12,34 +13,34 @@ SoftwareSerial SerialEsp(espRx, espTx);
  float tempCint;
  float caudal_L_h;
  
-// dependencias de OLED
-#include <Wire.h> // definir cursor pantalla
+// dependencias de pantalla OLED
+#include <Wire.h> // libreria para definir cursor pantalla, desde donde imprime la matriz
 #include <Adafruit_GFX.h> // definir libreria grafica
-#include <Adafruit_SSD1306.h> // definir libreria de OLED
-#define ANCHO 128 // ancho de la pantalla
-#define ALTO 64 // alto de la pantalla
+#include <Adafruit_SSD1306.h> // definir libreria de para el modelo de la pantalla OLED
+#define ANCHO 128 // pixeles de ancho de la pantalla
+#define ALTO 64 // pixeles de alto de la pantalla
 //#define OLED_RESET 4 // numero "aleatoreo" se usa solo para pantallas que tengan el boton
-Adafruit_SSD1306 oled(ANCHO, ALTO, &Wire, OLED_RESET); // setear parametros para el oled
+Adafruit_SSD1306 oled(ANCHO, ALTO, &Wire, OLED_RESET); // setear parametros para el oled, crear el objeto
 
-// dependencias DHT11 temperatura y humedad
-#include <DHT.h>
-#define DHTPIN 4 // pin a DHT11
+// dependencias DHT11 temperatura y humedad (interior)
+#include <DHT.h> // libreria para el modelo
+#define DHTPIN 10 // pin digital a DHT11
 #define DHTTYPE DHT11 // definir tipo de modelo de sensor
 DHT dht(DHTPIN, DHTTYPE); // enlaze pin y tipo
 
-// dependencias LM35
-#define VoltajeLM35    3300.0 // en milivolt
-#define RangoAnalogo 1024.0 // rango pin analogo 0 a 1023 
-#define PIN_LM35       A0 // pin a LM35
-#define PIN_LM352       1 // pin a LM35
+// dependencias LM35 temperatura (propio, exterior)
+#define VoltajeLM35    3300.0 // milivolt que se le suministran, se pueden 5 pero por recomendaciones se suministran 3.3
+#define RangoAnalogo 1024.0 // rango pin analogo 0 a 1023, predefinido, conversion de v a la señal analoga 
+#define PIN_LM35       A0 // pin analogo a LM35
+#define PIN_LM352      A1 // pin analogo a LM35
 
-// LEDS
-const int LEDOK = 7; // Led verde
-const int LEDNOK = 6; // Led rojo
+// LEDS, solo definincion de pin
+const int LEDOK = 7; // pin de Led verde
+const int LEDNOK = 6; // pin de Led rojo
 
 // dependencias del caudalimetro
-volatile int NumPulsos; // variable para la cantidad de pulsos recibidos
-int PinCaudalimetro = 2;    // Sensor conectado en el pin 2 analogo
+volatile int NumPulsos; // variable para la cantidad de pulsos recibidos, se resetea a cada rato 
+int PinCaudalimetro = 2;    // Sensor conectado en el pin 2 digital 
 float factor_conversion = 4.8; // para convertir de frecuencia a caudal (ver en el datasheet)
 int IntervaloMedicion = 2500; // Tiempo con el que se calculara el consumo
 float Volumen = 0; // Consumo en Litros
@@ -58,8 +59,8 @@ float ObtenerFrecuencia()
   // Codigo Caudalimetro
   float frecuencia; // Declarar arreglo 0=Frecuencia 1=TemperaturaExterior 2=Humedad 3=TemperaturaInterior
   NumPulsos = 0;   // Reset a 0 el número de pulsos
-  interrupts();    // Habilitar las interrupciones
-  delay(2000);   // muestra de 2 segundo
+  interrupts();    // Habilitar las interrupciones, como un break
+  delay(2000);   // muestra de 2 segundos (sensor de temp y humedad muere y tira errores, lo ideal es 1s)
   noInterrupts(); // Deshabilitar las interrupciones
   frecuencia = NumPulsos/2; // Hz(pulsos por segundo)
 
@@ -72,7 +73,7 @@ float ObtenerTemperaturaLM()
   // codigo sensor LM35 temperatura exterior
   float ValorLM35 = analogRead(PIN_LM35); // rango del sensor
   float milliVolt = ValorLM35 * (VoltajeLM35 / RangoAnalogo);// convertir rango a voltaje
-  int tempC = (milliVolt / 10);// convertir voltaje a C int para entero 
+  int tempC = (milliVolt / 10);// convertir voltaje a C int para entero, cada 10mv a 1°C
 
   return tempC;
 }
@@ -97,9 +98,9 @@ void pantalla(float tempCext, float tempCint, float humedad, float caudal_L_h, f
   
   oled.setTextColor(WHITE);
   oled.setCursor(0,0);
-  oled.setTextSize(1);
-  oled.print("Temp. Ext:");
-  oled.setCursor(65,0);
+  oled.setTextSize(1); // tamanio de la letra 
+  oled.print("Temp. Ext:"); 
+  oled.setCursor(65,0); 
   oled.setTextSize(1);
   oled.print(tempCext);
 
@@ -132,7 +133,7 @@ void pantalla(float tempCext, float tempCint, float humedad, float caudal_L_h, f
   oled.print(Volumen);
 
   oled.display();
-  delay(500);
+  delay(500); 
   oled.clearDisplay();
 }
 
@@ -140,13 +141,13 @@ void pantalla(float tempCext, float tempCint, float humedad, float caudal_L_h, f
 void setup()
 { 
   Wire.begin(); // Iniciar libreria de OLED
-  Serial.begin(115200);
-  SerialEsp.begin(9600);
-  dht.begin(); // Iniciar libreria sensor DHT11
-  pinMode(PinCaudalimetro, INPUT); // Iniciar el Pin Analogo del caudalimetro como input
+  Serial.begin(115200); (arduino)
+  SerialEsp.begin(9600); (wifi)
+  dht.begin(); // Iniciar libreria sensor DHT11 (humedad y temp)
+  pinMode(PinCaudalimetro, INPUT); // Iniciar el Pin digital del caudalimetro como input
   attachInterrupt(0,ContarPulsos,RISING); //(Interrupcion 0(Pin2),funcion,Flanco de subida)
   t0 = millis();
-  oled.begin(SSD1306_SWITCHCAPVCC, 0X3C); // Iniciar OLED (Tipo de alimentacion, ID de la pantalla)
+  oled.begin(SSD1306_SWITCHCAPVCC, 0X3C); // Iniciar OLED (Tipo de alimentacion(corriente continua), ID de la pantalla(arduino soporta mas de 1 pantalla))
   oled.clearDisplay();
 } 
 
@@ -160,15 +161,15 @@ void loop ()
   caudal_L_h = caudal_L_m*60; //calcular el caudal en Litros por hora
   dt = millis()-t0; // calcular variacion en el tiempo desde ultima medida
   t0 = millis(); // setear nuevo tiempo
-  Volumen = Volumen + (caudal_L_m/60) * (dt/1000); // Volumen (Litros) = caudal * tiempo en segundos
+  Volumen = Volumen + (caudal_L_m/60) * (dt/1000); // Volumen (Litros) = caudal(s) * tiempo en segundos
 
   // LLamado a los datos
   tempCext = ObtenerTemperaturaLM();
   tempCint = ObtenerTemperaturaLM();
 
   
-  // Parce Verificador de DHT11
-  if (isnan(dht.readHumidity()))
+  // Parce Verificador de DHT11, si tira error que no cambie el valor y mantiene el anterior
+  if (isnan(dht.readHumidity())) //isnan = valor no valido
   {
     humedad = humedad;
   } else
@@ -179,17 +180,17 @@ void loop ()
   // LEDs de estado
   digitalWrite(LEDNOK, LOW); // defecto LED rojo OFF
     
-  if(tempCint > 50) // Si temp supera apagar led verde
+  if(tempCint > 50 || humedad > 70) // Si temp supera apagar led verde
   {
-    digitalWrite(LEDOK, LOW);
+    digitalWrite(LEDOK, LOW); // modifica el voltaje a 0 para apagar 
   } else
   {
     digitalWrite(LEDOK, HIGH);
   }
 
-  if(tempCint > 50) // Si temp supera prender led rojo
+  if(tempCint > 50 || humedad > 70) // Si temp supera prender led rojo
   {
-    digitalWrite(LEDNOK, HIGH);
+    digitalWrite(LEDNOK, HIGH); // modifica el voltaje a tope para prender 
   } else
   {
     digitalWrite(LEDNOK, LOW);
